# Rapidstory

./: .gitignore  README.md  config.py  main.py  pyproject.toml  rapidstory_full.py  rapidstory_global.py  rapidstory_inline.py  search.py  utils.py
docs/: CONFIGURATION.md  INSTALLATION.md
scripts/: install.sh
src/rapidstory/: __init__.py  __main__.py  database.py  main.py  rapidstory_full.py  rapidstory_global.py  rapidstory_inline.py
src/rapidstory/ui/: __init__.py  ui_full_mode.py  ui_global.py  ui_inline_mode.py  ui_protocol.py
ui/: colors.py
