[project]
name = "rapidstory"
version = "0.1.0"
description = "Recherche ultra-rapide dans l'historique Bash avec interface moderne"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "rapidfuzz>=3.14.3",
]

[project.scripts]
rapidstory = "rapidstory.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
